try to build native image